Fixed All Projects footer border spacing

--- a/_assets/scss/layouts/_all-projects.scss
+++ b/_assets/scss/layouts/_all-projects.scss
@@ -1,6 +1,6 @@
 .all-projects {
 	@include breakpoint($small) {
-		footer {
+		footer .row:before {
 			margin-right: $unit-2;
 		}
 	}
